[Reports] Embed Rally version into HTML reports
This adds Rally version via meta tag into HTML reports:
  <meta name="generator" content="Rally version {{ version }}">.

This information can be very useful during report investigation.

Change-Id: Id9891cb7e050e5f3f3ca0c0a6d0e5b11992b35c9

--- a/rally/ui/templates/base.html
+++ b/rally/ui/templates/base.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {%- if version %}
+  <meta name="generator" content="Rally version {{ version }}">
+  {%- endif %}
   <title>Rally | {% block title_text %}{% endblock %}</title>
   {% block libs %}{% endblock %}
   <script type="text/javascript">{% block js_before %}{% endblock %}</script>
