[Reports] Expand menu if there is only one menu group
HTML report menu groups scenarios by their first part
of name (before `.').

There is no reason to have menu collapsed if there is
only one menu group (for example, if there are only
Dummy scenarios).

Change-Id: I01032c32a94ded771acabddc196f79aee55c7857

--- a/rally/ui/templates/task/report.html
+++ b/rally/ui/templates/task/report.html
@@ -73,6 +73,12 @@
 
       $scope.route = function(uri) {
         if (! $scope.scenarios_map) { return }
+
+        // Expand menu if there is only one menu group
+        if ($scope.nav.length === 1) {
+          $scope.nav_idx = $scope.nav[0].idx;
+        }
+
         if (uri.path in $scope.scenarios_map) {
           $scope.view = {is_scenario:true};
           $scope.scenario = $scope.scenarios_map[uri.path];
