[Reports] Hide menu list if there is no data at all
If there is no data passed to trends report for some reason
(for example if all given tasks are failed) then there is an
error message "No data" is shown (it is OK) but there is also
an empty menu list is visible which should be hidden in this
case.

This patch fixes this.

Change-Id: Ie1d82a1a41718a9c976d5a485fcdcac4f4a02d80

--- a/rally/ui/templates/task/trends.html
+++ b/rally/ui/templates/task/trends.html
@@ -253,7 +253,7 @@
 {% raw %}
     <p id="page-error" class="notify-error" style="display:none"></p>
 
-    <div id="content-nav" class="aside" ng-cloack>
+    <div id="content-nav" class="aside" ng-show="data.length" ng-cloack>
       <div>
         <div class="navcls"
              ng-class="{active:view.is_main}"
