[Reports] Fix layout in base.html
There is a piece of MAKO code in the layout,
which must be removed.

Change-Id: Ie4137e695f21c2dde77b941bec0d5486375e4d62

--- a/rally/ui/templates/base.html
+++ b/rally/ui/templates/base.html
@@ -36,7 +36,7 @@
     .status-fail, .status-fail td { color:red }
     .capitalize { text-transform:capitalize }
     {% block css %}{% endblock %}
-    .content-wrap { {% block css_content_wrap %}{% endblock %} margin:0 auto; padding:0 5px </%block>}
+    .content-wrap { {% block css_content_wrap %}{% endblock %} margin:0 auto; padding:0 5px }
     {% block media_queries %}{% endblock %}
   </style>
 </head>
