[Reports] Fix sorting for Hooks column in overview table
Change-Id: Ia246c3350b1df658111b1c1eb2d3dbdbc55869ae

--- a/rally/ui/templates/task/report.html
+++ b/rally/ui/templates/task/report.html
@@ -433,7 +433,7 @@
                   <b ng-show="ov_srt=='errors.length' && ov_dir">&#x25be;</b>
                 </span>
               <th class="sortable" title="Number of hooks"
-                  ng-click="ov_srt='hooks.count'; ov_dir=!ov_dir">
+                  ng-click="ov_srt='hooks.length'; ov_dir=!ov_dir">
                 Hooks
                 <span class="arrow">
                   <b ng-show="ov_srt=='hooks.length' && !ov_dir">&#x25b4;</b>
